# drone_project

mpc_control/: CMakeLists.txt  README.md  package.xml
mpc_control/config/: mpc_params.yaml
mpc_control/include/drone_mpc_control/: mpc_controller.hpp
mpc_control/launch/: drone_mpc_control.launch.py  sim_mpc_control.launch.py
mpc_control/src/: mpc_controller.cpp  mpc_controller_node.cpp  px4_bridge_node.cpp  trajectory_generator_node.cpp
vio/.claude/: settings.local.json
vio/.claude/memory/: MEMORY.md  project_hardware.md  user_profile.md  vio_basalt_vs_cuvslam.md
